--- a/day32assignments/Rock_paper_scissors/index.html
+++ b/day32assignments/Rock_paper_scissors/index.html
@@ -12,11 +12,28 @@
         <h1>Rock Paper Scissors</h1>
         
         <div id="result">
+            
+            <div id="players">
+                <div id="player1">
+                  <h2>You</h2>
+                  <p>Score: <span id="player1-score">0</span></p>
+                </div>
+                <div id="player2">
+                  <h2>Computer</h2>
+                  <p>Score: <span id="player2-score">0</span></p>
+                </div>
+              </div>
+              <div id="game-results">
+                <p><span id="round-winner"></span></p>
+                <p><span id="game-winner"></span></p>
+              </div>
 
         </div>
-        <div class="start-text">
+        <div id="start-text">
             Choose your option to get started.
         </div>
+
+
         <div id="group-btn">
             <button id="rock" type="button">
                 <img src= 'rock.jpg'>
