--- a/day34assignments/index.html
+++ b/day34assignments/index.html
@@ -97,7 +97,7 @@
                 
 
                 if (response.status == noF|| response.status == noFO) {
-                    document.getElementsByClassName(".typeOther").value;
+                    alert('insert a valid ZIP code')
                     zipCodeUser.addEventListener("click", () => {
                         zipCodeUser.value = "";
             });
